<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FACF50"
    tools:context=".SignUpPage">

    <LinearLayout
        android:layout_width="322dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="140dp">

        <EditText
            android:id="@+id/SignUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/SignUpSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/BirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Birthdate"
            android:inputType="date" />

        <EditText
            android:id="@+id/PasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/SignUpRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Re-Password"
            android:inputType="textPassword" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="163dp"
        android:layout_height="144dp"
        app:srcCompat="@drawable/education"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="499dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="357dp"
        android:layout_height="217dp"
        app:srcCompat="@drawable/schollll"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="-30dp" />

    <Button
        android:id="@+id/FotoEkle"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:backgroundTint="#9ED6A0"
        android:text="@string/resim_ekle"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="498dp" />

    <Button
        android:id="@+id/kayıtOl"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:text="@string/kayit_ol"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="506dp" />
</android.support.constraint.ConstraintLayout>